Quick bug fix to spacing on the header.

--- a/ui/src/components/ExchangeHeader/exchange-header.scss
+++ b/ui/src/components/ExchangeHeader/exchange-header.scss
@@ -13,7 +13,7 @@
     &__label {
       @extend %ellipsify;
       flex: 0 0 auto;
-      font-size: .625rem;
+      font-size: .325rem;
       text-transform: uppercase;
       color: rgba($white, .25);
     }
